# Agentic_Mesh

./: .dockerignore  .env.example  .gitignore  README.md  params.yaml  pyproject.toml  requirements-dev.txt  requirements.agents.txt  requirements.api.txt  requirements.edge.txt  requirements.fl.txt  requirements.txt
Documents/: Decentralized Agentic Mesh for Privacy-Preserving Industrial Analytics.docx  implementation_plan.docx  ~$centralized Agentic Mesh for Privacy-Preserving Industrial Analytics.docx  ~$plementation_plan.docx
agents/: graph.py
api/: node_api.py
data/: .gitignore  partitions.dvc  processed.dvc  raw.dvc
docs/: week2_notes.md
edge/: config.py  data_loader.py  main.py
edge/models/: vae.py
edge/training/: dp_trainer.py  trainer.py
federated/: server.py
implementation_docs/: week2_data_preprocessing_and_partitioning.md
infra/docker/: agents.Dockerfile  api.Dockerfile  edge.dockerfile  fl_server.Dockerfile
infra/k3s/: cluster-config.yaml
infra/kafka/: docker-compose.yml
notebooks/: 01_data_exploration.py
scripts/: check_datasets.py  init_db.py  partition_data.py  process_dataset.py  seed_registry.py  verify_messaging.py
tests/unit/: test_data_loader.py  test_dp_trainer.py  test_vae.py  test_week1_scaffold.py  test_week2_data.py
