[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-mesh"
version = "0.1.0"
description = "Decentralized Agentic Mesh for Privacy-Preserving Industrial Analytics"
requires-python = ">=3.12"
authors = [{ name = "Allaudin Ansari" }]

[tool.setuptools.packages.find]
include = ["edge*", "federated*", "agents*", "api*", "evaluation*"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["edge", "federated", "agents", "api", "evaluation"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true